@@ -726,6 +726,43 @@ tokenizer|Hailo::Tokenizer::Chars>. It's not generally useful for a
 conversation bot but can be used to e.g. generate new words given a
 list of existing words.
 
+=head1 UPGRADING
+
+Hailo makes no promises about brains generated with earlier versions
+being compatable with future version and due to the way Hailo works
+there's no practical way to make that promise.
+
+If you're maintaining a Hailo brain that you want to keep using you
+should save the input you trained it on and re-train when you upgrade.
+
+The reason for not offering a database schema upgrade for Hailo is
+twofold:
+
+=over
+
+=item * We're too lazy to maintain database upgrade scripts for every version.
+
+=item * Even if we weren't there's no way to do it right.
+
+=back
+
+The reason it can't be done right is that Hailo is always going to
+destroy information present in the input you give it. How input tokens
+get split up and saved to the storage backend depends on the version
+of the tokenizer being used and how that input gets saved to the
+database.
+
+For instance if an earlier version of Hailo tokenized C<"foo+bar">
+simply as as C<"foo+bar"> but a later version split that up into
+C<"foo", "+", "bar"> an input of C<"foo+bar are my favorite
+metasyntactic variables"> wouldn't take into account the existing
+C<"foo+bar"> string in the database.
+
+Just because of tokenizer changes carrying over brains like this would
+accumulate dead parts of the database & leave other parts in a state
+they wouldn't otherwise have gotten into. There have been similar
+changes to the database format itself.
+
 =head1 ATTRIBUTES
 
 =head2 C<brain_resource>
